--- a/src/GUI/InfoDialog/GUI_Lyrics.ui
+++ b/src/GUI/InfoDialog/GUI_Lyrics.ui
@@ -132,7 +132,7 @@
       <widget class="QLineEdit" name="le_artist"/>
      </item>
      <item row="0" column="7">
-      <widget class="QComboBox" name="combo_servers">
+      <widget class="Gui::ComboBox" name="combo_servers">
        <property name="sizePolicy">
         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Minimum">
          <horstretch>0</horstretch>
@@ -200,6 +200,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>Gui::ComboBox</class>
+   <extends>QComboBox</extends>
+   <header>GUI/Utils/Widgets/ComboBox.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
