directory view update

--- a/src/GUI/Resources/dark.css
+++ b/src/GUI/Resources/dark.css
@@ -122,6 +122,16 @@ Library--ItemView
 	font-weight: <<FONT_WEIGHT_LIB>>;
 }
 
+SearchableListView:disabled,
+DirectoryTreeView:disabled,
+FileListView:disabled,
+Library--View:disabled,
+Library--GenreView:disabled,
+Library--ItemView:disabled
+{
+	color: #7f7f7f;
+}
+
 PlaylistView
 {
 	font-size: <<FONT_SIZE_PL>>pt;
@@ -826,4 +836,16 @@ RatingLabel:focus
 {
 	border: 1px solid #e8841a;
 }
+
+#albumCover
+{
+	background: transparent;
+	border: none;
+}
+
+#albumCover:hover:enabled
+{
+	border: 1px solid #e8841a;
+}
+
 
