--- a/src/3rdParty/SomaFM/ui/GUI_SomaFM.ui
+++ b/src/3rdParty/SomaFM/ui/GUI_SomaFM.ui
@@ -14,7 +14,7 @@
    <item row="8" column="1">
     <widget class="QListView" name="lv_playlists">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
+      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
