--- a/src/GUI/Preferences/StreamRecorder/GUI_StreamRecorder.ui
+++ b/src/GUI/Preferences/StreamRecorder/GUI_StreamRecorder.ui
@@ -27,6 +27,12 @@
        <string>General</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout">
+       <property name="horizontalSpacing">
+        <number>10</number>
+       </property>
+       <property name="verticalSpacing">
+        <number>6</number>
+       </property>
        <item row="3" column="0">
         <widget class="QLabel" name="label_2">
          <property name="text">
