--- a/src/GUI/Covers/GUI_AlternativeCovers.ui
+++ b/src/GUI/Covers/GUI_AlternativeCovers.ui
@@ -251,7 +251,7 @@
         <enum>Qt::StrongFocus</enum>
        </property>
        <property name="text">
-        <string>OK</string>
+        <string notr="true">OK</string>
        </property>
        <property name="iconSize">
         <size>
