--- a/src/GUI/Directories/GUI_DirectoryWidget.ui
+++ b/src/GUI/Directories/GUI_DirectoryWidget.ui
@@ -43,6 +43,9 @@
        <bold>true</bold>
       </font>
      </property>
+     <property name="autoScroll">
+      <bool>true</bool>
+     </property>
      <property name="dragEnabled">
       <bool>true</bool>
      </property>
