--- a/src/GUI/Preferences/PlaylistPreferences/GUI_PlaylistPreferences.ui
+++ b/src/GUI/Preferences/PlaylistPreferences/GUI_PlaylistPreferences.ui
@@ -26,7 +26,7 @@
    <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -130,17 +130,37 @@
        <string>Look</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_3">
-       <item row="4" column="1">
+       <item row="3" column="0" colspan="2">
+        <widget class="QLineEdit" name="le_expression"/>
+       </item>
+       <item row="5" column="1">
         <widget class="QPushButton" name="btn_default">
          <property name="text">
           <string notr="true">Default</string>
          </property>
         </widget>
        </item>
-       <item row="2" column="0" colspan="2">
-        <widget class="QLineEdit" name="le_expression"/>
-       </item>
        <item row="5" column="0">
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="1" column="0" colspan="2">
+        <widget class="QCheckBox" name="cb_show_numbers">
+         <property name="text">
+          <string>Show numbers</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0">
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -153,7 +173,7 @@
          </property>
         </spacer>
        </item>
-       <item row="3" column="0" colspan="2">
+       <item row="4" column="0" colspan="2">
         <layout class="QGridLayout" name="gridLayout_2">
          <property name="horizontalSpacing">
           <number>6</number>
@@ -272,30 +292,17 @@
          </item>
         </layout>
        </item>
-       <item row="4" column="0">
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="1" column="0" colspan="2">
-        <widget class="QCheckBox" name="cb_show_numbers">
-         <property name="text">
-          <string>Show numbers</string>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="0">
         <widget class="QCheckBox" name="cb_show_clear_button">
          <property name="text">
           <string>Show clear button</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QCheckBox" name="cb_show_covers">
+         <property name="text">
+          <string>Show covers</string>
          </property>
         </widget>
        </item>
