--- a/src/GUI/Preferences/PlaylistPreferences/GUI_PlaylistPreferences.ui
+++ b/src/GUI/Preferences/PlaylistPreferences/GUI_PlaylistPreferences.ui
@@ -130,17 +130,17 @@
        <string>Look</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_3">
-       <item row="3" column="0" colspan="2">
+       <item row="4" column="0" colspan="2">
         <widget class="QLineEdit" name="le_expression"/>
        </item>
-       <item row="5" column="1">
+       <item row="6" column="1">
         <widget class="QPushButton" name="btn_default">
          <property name="text">
           <string notr="true">Default</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="0">
+       <item row="6" column="0">
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -160,7 +160,7 @@
          </property>
         </widget>
        </item>
-       <item row="6" column="0">
+       <item row="7" column="0">
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -173,7 +173,7 @@
          </property>
         </spacer>
        </item>
-       <item row="4" column="0" colspan="2">
+       <item row="5" column="0" colspan="2">
         <layout class="QGridLayout" name="gridLayout_2">
          <property name="horizontalSpacing">
           <number>6</number>
@@ -303,6 +303,13 @@
         <widget class="QCheckBox" name="cb_show_covers">
          <property name="text">
           <string>Show covers</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QCheckBox" name="cb_show_rating">
+         <property name="text">
+          <string>Show rating</string>
          </property>
         </widget>
        </item>
