--- a/src/GUI/Preferences/PlayerPreferences/GUI_PlayerPreferences.ui
+++ b/src/GUI/Preferences/PlayerPreferences/GUI_PlayerPreferences.ui
@@ -7,28 +7,35 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>115</height>
+    <height>174</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="4" column="0">
-    <widget class="QCheckBox" name="cb_update_notifications">
-     <property name="text">
-      <string>Update notifications</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0">
-    <widget class="QCheckBox" name="cb_start_in_tray">
-     <property name="text">
-      <string>Start in tray</string>
-     </property>
-    </widget>
+   <item row="6" column="0">
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="lab_logger">
+       <property name="text">
+        <string notr="true">Logger</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="Gui::ComboBox" name="cb_logger"/>
+     </item>
+    </layout>
    </item>
    <item row="3" column="0">
     <widget class="QCheckBox" name="cb_close_to_tray">
      <property name="text">
       <string>Close to tray</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <widget class="QCheckBox" name="cb_update_notifications">
+     <property name="text">
+      <string>Update notifications</string>
      </property>
     </widget>
    </item>
@@ -39,8 +46,29 @@
      </property>
     </widget>
    </item>
+   <item row="1" column="0">
+    <widget class="QCheckBox" name="cb_start_in_tray">
+     <property name="text">
+      <string>Start in tray</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="0">
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>Gui::ComboBox</class>
+   <extends>QComboBox</extends>
+   <header location="global">GUI/Utils/Widgets/ComboBox.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
